--- a/src/daily_collection.html
+++ b/src/daily_collection.html
@@ -27,7 +27,7 @@
             <div class="dropdown-content">
               <a href="tax.html" class="nav-link">Tax Payer</a>
               <a href="payment_form.html" class="nav-link">Payment Form</a>
-              <a href="daily_collection.html" class="nav-link">Daily Collection</a>
+              <a href="daily_collection.html" class="nav-link active">Daily Collection</a>
               <a href="#" class="nav-link">Reconciliations</a>
             </div>
           </li>
