--- a/src/tax.html
+++ b/src/tax.html
@@ -26,7 +26,7 @@
             <a href="#" class="nav-link dropdown-toggle active" onclick="toggleDropdown(event, this)">Revenue Collection</a>
             <div class="dropdown-content">
               <a href="tax.html" class="nav-link active">Tax Payer</a>
-              <a href="payment_form.html" class="nav-link active">Payment Form</a>
+              <a href="payment_form.html" class="nav-link">Payment Form</a>
               <a href="daily_collection.html" class="nav-link">Daily Collection</a>
               <a href="#" class="nav-link">Reconciliations</a>  
             </div>
